# mono

./: README.md  mono-properties.cmake  mono.cmake
example/: CMakeLists.txt
example/my_app/: CMakeLists.txt  main.ixx
example/my_lib/: CMakeLists.txt  main.ixx
hooks/: mono-add-custom-target.cmake  mono-add-executable.cmake  mono-add-library.cmake
